[Bugfix] Word wrap for new comments in note panel isn't working- 10.2 (#6952)

--- a/src/components/NoteTextarea/CommentTextarea/CommentTextarea.scss
+++ b/src/components/NoteTextarea/CommentTextarea/CommentTextarea.scss
@@ -35,7 +35,7 @@
 
       p {
         margin: 0;
-        word-break: break-all;
+        word-break: break-word;
       }
 
       ul>li::before {
